add a new haeding

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h4>this is my second repo</h4>
+    <h4>its good to gain knowledge about git and github</h4>
     
 </body>
 </html>
