--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h4>this is my second repo</h4>
     <h4>its good to gain knowledge about git and github</h4>
+    <ol>
+        <li> apple</li>
+        <li>pineapple</li>
+        <li>banana</li>
+    </ol>
     
 </body>
 </html>
