correction of variable name

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="b1" onclick="cartQunatity+=1 ;document.querySelector('#cart').innerText=`Your Bag has ${cartQuantity} items`;">Add to Bag</button>
+    <button class="b1" onclick="cartQuantity+=1 ;document.querySelector('#cart').innerText=`Your Bag has ${cartQuantity} items`;">Add to Bag</button>
 
 
-    <button id="b2" onclick="cartQunatity-=1 ;document.querySelector('#cart').innerText=`Your Bag has ${cartQuantity} items`;"> move to wishlist</button>
+    <button id="b2" onclick="cartQuantity-=1 ;document.querySelector('#cart').innerText=`Your Bag has ${cartQuantity} items`;"> move to wishlist</button>
 
 
-    <button class="b1" onclick="cartQunatity+=2 ;document.querySelector('#cart').innerText=`Your Bag has ${cartQuantity} items`;" > Add 1+1 sale item</button>
+    <button class="b1" onclick="cartQuantity+=2 ;document.querySelector('#cart').innerText=`Your Bag has ${cartQuantity} items`;" > Add 1+1 sale item</button>
 
     <h1 id="cart"></h1>
 <script>
